# ppim-migrator

./: .gitignore  Dockerfile  README.md  config.py  config.yaml.example  main.py  migrator.py  pyproject.toml  requirements.txt  shell.nix
.devcontainer/: devcontainer.json
.github/workflows/: pypi.yml
api/: immich_api.py  photoprism_api.py
ppim-migrator/: __main__.py  config.py  migrator.py
ppim-migrator/api/: immich_api.py  photoprism_api.py
ppim_migrator/: migrator.py
